--- a/src/renderer/src/features/settings-button/SettingsButton.module.scss
+++ b/src/renderer/src/features/settings-button/SettingsButton.module.scss
@@ -3,7 +3,7 @@
 @use '../../breakpoints' as *;
 
 .settingsButton {
-   grid-column: 4;
+   grid-column: 5;
 }
 
 .settingsIcon {
